--- a/pirateservice/src/main/resources/application.properties
+++ b/pirateservice/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 # Datasource and Postgres settings
+spring.config.import=optional:file:.env[.properties]
 spring.datasource.url=jdbc:postgresql://localhost:5432/pirates
-spring.datasource.username=user
-spring.datasource.password=
+spring.datasource.username=postgres
+spring.datasource.password=${PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
